@@ -31,7 +31,6 @@ import org.jfree.data.general.PieDataset;
 import org.primefaces.model.DefaultStreamedContent;
 import org.primefaces.model.StreamedContent;
 
-import javax.annotation.PostConstruct;
 import javax.enterprise.context.RequestScoped;
 import javax.imageio.ImageIO;
 import javax.inject.Named;
@@ -41,19 +40,16 @@ import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileInputStream;
+import java.io.IOException;
+import java.io.InputStream;
 
 @Named
 @RequestScoped
 public class GraphicImageView {
 
-    private StreamedContent graphicText;
-
-    private StreamedContent chart;
-
-    @PostConstruct
-    public void init() {
+    public StreamedContent getGraphicText() {
         try {
-            graphicText = DefaultStreamedContent.builder()
+            return DefaultStreamedContent.builder()
                     .contentType("image/png")
                     .stream(() -> {
                         try {
@@ -70,8 +66,16 @@ public class GraphicImageView {
                         }
                     })
                     .build();
+        }
+        catch (Exception e) {
+            e.printStackTrace();
+            return null;
+        }
+    }
 
-            chart = DefaultStreamedContent.builder()
+    public StreamedContent getChart() {
+        try {
+            return DefaultStreamedContent.builder()
                     .contentType("image/png")
                     .stream(() -> {
                         try {
@@ -86,25 +90,51 @@ public class GraphicImageView {
                         }
                     })
                     .build();
-        } catch (Exception e) {
+        }
+        catch (Exception e) {
             e.printStackTrace();
+            return null;
         }
     }
 
-    public StreamedContent getGraphicText() {
-        return graphicText;
+    public StreamedContent getChartWithoutBuffering() {
+        try {
+            return DefaultStreamedContent.builder()
+                    .contentType("image/png")
+                    .writer((os) -> {
+                        try {
+                            JFreeChart jfreechart = ChartFactory.createPieChart("Cities", createDataset(), true, true, false);
+                            ChartUtilities.writeChartAsPNG(os, jfreechart, 375, 300);
+                        }
+                        catch (Exception e) {
+                            e.printStackTrace();
+                        }
+                    })
+                    .build();
+        }
+        catch (Exception e) {
+            e.printStackTrace();
+            return null;
+        }
     }
 
-    public StreamedContent getChart() {
-        return chart;
+    public InputStream getChartAsStream() {
+        return getChart().getStream().get();
+    }
+
+    public byte[] getChartAsByteArray() throws IOException {
+        InputStream is = getChartAsStream();
+        byte[] array = new byte[is.available()];
+        is.read(array);
+        return array;
     }
 
     private PieDataset createDataset() {
         DefaultPieDataset dataset = new DefaultPieDataset();
-        dataset.setValue("New York", new Double(45.0));
-        dataset.setValue("London", new Double(15.0));
-        dataset.setValue("Paris", new Double(25.2));
-        dataset.setValue("Berlin", new Double(14.8));
+        dataset.setValue("New York", Double.valueOf(45.0));
+        dataset.setValue("London", Double.valueOf(15.0));
+        dataset.setValue("Paris", Double.valueOf(25.2));
+        dataset.setValue("Berlin", Double.valueOf(14.8));
 
         return dataset;
     }
